tests/src/frontend/syntax/invalid/dict_mixed_literal_2.sk
fun main(): String {
  v = Dict [ ("key2", "Fail!"), "key" => "Hello world!\n" ];
  v["key"]
}
